tests/snapshots/usage/sources__delete.snap
---
source: tests/cli/snapshots.rs
---
$ vendo sources delete
exit: 2
--- stderr ---
error: the following required arguments were not provided:
  <sourceId>

Usage: vendo sources delete <sourceId>

For more information, try '--help'.

$ vendo sources delete --json
exit: 2
--- stderr ---
{"error":{"message":"the following required arguments were not provided:\n  <sourceId>","code":null,"status":null,"requestId":null}}
