tests/snapshots/usage/sources__pause.snap
---
source: tests/cli/snapshots.rs
---
$ vendo sources pause
exit: 2
--- stderr ---
error: the following required arguments were not provided:
  <sourceId>

Usage: vendo sources pause <sourceId>

For more information, try '--help'.

$ vendo sources pause --json
exit: 2
--- stderr ---
{"error":{"message":"the following required arguments were not provided:\n  <sourceId>","code":null,"status":null,"requestId":null}}
