tests/snapshots/usage/sources__sync.snap
---
source: tests/cli/snapshots.rs
---
$ vendo sources sync
exit: 2
--- stderr ---
error: the following required arguments were not provided:
  <sourceId>

Usage: vendo sources sync <sourceId>

For more information, try '--help'.

$ vendo sources sync --json
exit: 2
--- stderr ---
{"error":{"message":"the following required arguments were not provided:\n  <sourceId>","code":null,"status":null,"requestId":null}}
