tests/snapshots/usage/sources__update.snap
---
source: tests/cli/snapshots.rs
---
$ vendo sources update
exit: 2
--- stderr ---
error: the following required arguments were not provided:
  <sourceId>

Usage: vendo sources update <sourceId>

For more information, try '--help'.

$ vendo sources update --json
exit: 2
--- stderr ---
{"error":{"message":"the following required arguments were not provided:\n  <sourceId>","code":null,"status":null,"requestId":null}}
